# baal

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  baal.db-shm  baal.db-wal  docker-compose.yml  pyproject.toml  ui-design-prompt.md
apps/liberclaw/: app.json  global.css  package-lock.json  package.json  tailwind.config.js
apps/liberclaw/app/: _layout.tsx
apps/liberclaw/app/(auth)/: _layout.tsx  (+2 more)
apps/liberclaw/patches/: react-native-css-interop+0.2.1.patch
deploy/: .env.production  Caddyfile  liberclaw-api.service  setup.sh
docs/plans/: 2026-02-12-liberclaw-design-parity-impl.md  2026-02-12-liberclaw-design-parity.md  2026-02-13-mobile-auth-guest-mode-design.md  2026-02-13-mobile-auth-guest-mode-plan.md  2026-02-13-skills-gallery-design.md  2026-02-13-skills-gallery-plan.md  initial-architecture.md  liberclaw-architecture.md
sites/landing/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
src/baal/: config.py  main.py
src/baal/database/: db.py
src/baal/handlers/: account.py  chat.py  commands.py  deployment_progress.py  error_handlers.py  ui_utils.py
src/baal/services/: deployer.py  encryption.py  pool_manager.py  proxy.py  rate_limiter.py
src/baal_agent/: config.py  context.py  database.py  inference.py  main.py  tools.py
src/baal_core/: __init__.py  crn_geo.py  deployer.py  models.py  pool_manager.py  proxy.py
src/baal_core/templates/: catalog.json  loader.py
src/liberclaw/: __init__.py  config.py  main.py
src/liberclaw/auth/: dependencies.py  id_token.py  jwt.py  magic_link.py  oauth.py  wallet.py
src/liberclaw/database/: models.py  session.py
src/liberclaw/routers/: activity.py  agents.py  auth.py  chat.py  files.py  health.py  network.py  templates.py  usage.py  users.py
src/liberclaw/schemas/: activity.py  agents.py  auth.py  chat.py  templates.py  usage.py  users.py
src/liberclaw/services/: activity.py  agent_manager.py  chat_proxy.py  deployment_progress.py  email.py  usage_tracker.py
tests/: test_compaction.py  test_send_file.py
(+112 files in other folders)
