[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baal"
version = "0.1.0"
description = "Telegram bot platform for deploying AI agents on Aleph Cloud with LibertAI inference"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.0",
    "aiosqlite>=0.20",
    "cryptography>=42.0",
]

[project.optional-dependencies]
bot = [
    "python-telegram-bot[ext]>=22.0",
    "httpx>=0.27",
    "aleph-sdk-python[ethereum]",
    "eth_account",
]
agent = [
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "openai>=1.0",
]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["src/baal", "src/baal_agent"]
